6730192: expression stack wrong at deoptimization point

Add safepoint before popping expression stack, not after

Reviewed-by: kvn